Version 2.0.0rc6 - The '???' version.
----------
2004-0?-??

	phoenix:
		* Fixed a compilation warning + appartently useless code in 
		  DirectoryTree.cpp.
		* Fixed amuleIPV4Address for wx-2.5.2 and up.

Version 2.0.0rc5 - The 'Let's recover our release speed' version.
----------
2004-07-18

	deltaHF:
	        * Better sorting of some columns

	Kry:
		* Some gui design and coding of the upcoming Kad window
		* Protocol update:
			* UDP protocol upgraded to eMule 0.43b
			* TCP Standard Base protocol upgraded to eMule 0.43b
			* TCP Extended Base protocol upgraded to eMule 0.43b
		* Fixed memory corruption and crashes on 'cas'
		* Fixed gsocket-2.5.c for big endian archs.
		* Fixed CFile class to actually return error when a error ocurred and not only when it feels like.
		* Fixed bug where the 'All' category could be removed leading to crashes and other funny behaviours.
		* No more minimize when no tray has been selected.
		* Fixed browse skin file button to actually browse a file ;)
		* Fixed high 32 bits of transfered bytes not being loaded on known.met (sorry fluffly!)
		* Some Mac bugfixes.

	Hetfield:
		* Some gcc 3.4.x compilation fixes
	
	lfroen:
		* GUIEvents updated 
		* core2gui events added.
		* Some gcc 3.4 fixes to GUIEvents

	phoenix:
		* Added a test with a warning to
		  CSearchDlg::OnBnClickedSdownload in SearchDlg.cpp. A NULL
		  value has been reported on the foruns, we don't know how
		  GetPage() or FindWindowById() could have returned NULL.
		* More unicode fixes to alcc and ed2khash.
		* Fixed flags for console applications. -DwxUSE_GUI=0 is
		  required so that amuleweb, amulecmd, etc, run fine with
		  wxWidgets version 2.5.2 and up.
		* Fixed a problem with gsocket-2.5.c when using wxWidgets
		  version 2.5.2 and up. Now amule runs with 2.5.2.
		* New ipfilter code.
		* Found the reason why wx-2.5.2 gui was messed: starting with
		  wx-2.5.2, a new flag must be added when adding components to